--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,8 @@ jobs:
         run: |
           Write-host $PSVersionTable.PSVersion.Major $PSVersionTable.PSRemotingProtocolVersion.Minor
           Set-PSRepository psgallery -InstallationPolicy trusted
-          Install-Module -Name Pester -confirm:$false -Force
+          Install-Module -Name Pester, Az -confirm:$false -Force
+
           Invoke-Pester . -CI
 
         shell: pwsh
